clicking on a product on in stock page now loads the correct item in the product page. Product page takes info from in stock page

--- a/src/inStock.html
+++ b/src/inStock.html
@@ -74,7 +74,7 @@
             </div>
             <div id = "in-stock-main">
                 <div class = "in-stock-item" >
-                    <a href=#>
+                    <a href=product.html onclick="saveCurrentItem(this)">
                         <p class = "in-stock-img">
                             <img src = "InStockImages/Pleasures-Freaks T-Shirt.jpg">
                         </p>
@@ -82,12 +82,11 @@
                             <p><strong>PLEASURES</strong></p>
                             <p class = 'in-stock-item-name'>Freaks T-Shirt</p>
                             <p>$38</p>
-                            <button id = "add-to-cart-button" onclick = "addItemToCart(this)">Add To Cart</button>
                         </div>
                     </a>
                 </div>
                 <div class = "in-stock-item">
-                    <a href=#>
+                    <a href=product.html onclick="saveCurrentItem(this)">
                         <p class = "in-stock-img">
                             <img src = "InStockImages/FEAR OF GOD-Pleated Suit Pant.jpg">
                         </p>
@@ -95,12 +94,11 @@
                             <p><strong>FEAR OF GOD</strong></p>
                             <p>Pleated Suit Pant</p>
                             <p>$320</p>
-                            <button id = "add-to-cart-button" onclick = "addItemToCart(this)">Add To Cart</button>
                         </div>
                     </a>
                 </div>
                 <div class = "in-stock-item">
-                    <a href=product.html>
+                    <a href=product.html onclick="saveCurrentItem(this)">
                         <p class = "in-stock-img">
                             <img src = "InStockImages/Jacquemus-Le T-Shirt Jacques.jpg">
                         </p>
@@ -118,7 +116,6 @@
                             <p><strong>MONCLER GENIUS</strong></p>
                             <p>x JW Anderson T-Shirt</p>
                             <p>$345</p>
-                            <button id = "add-to-cart-button" onclick = "addItemToCart(this)">Add To Cart</button>
                         </div>
                     </a>
                 </div>
@@ -129,7 +126,6 @@
                             <p><strong>Brand</strong></p>
                             <p>Name</p>
                             <p>Price</p>
-                            <button id = "add-to-cart-button" onclick = "addItemToCart(this)">Add To Cart</button>
                         </div>
                     </a>
                 </div>
@@ -140,7 +136,6 @@
                             <p><strong>Brand</strong></p>
                             <p>Name</p>
                             <p>Price</p>
-                            <button id = "add-to-cart-button" onclick = "addItemToCart(this)">Add To Cart</button>
                         </div>
                     </a>
                 </div>                                    
