--- a/src/product.html
+++ b/src/product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Jacquemus - Le T-Shirt Jacques</title>
+        <title>Product</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
     </head>
