updated Saved page

--- a/src/saved.html
+++ b/src/saved.html
@@ -53,6 +53,7 @@
             <h1>Saved</h1>
         </div>
 
+        <!--
         <div id = "saved-items-container">
             <div id = "saved-items-main">
                 <div class = "saved-item" >
@@ -69,6 +70,23 @@
                     </a>
                 </div>
                                       
+            </div>
+        </div>      -->
+        <div id = "saved-items-container">
+            <div id = "saved-items-main">
+                <div class = "saved-item">
+                    <a href=# id = "remove-button">X</a>
+                    <a href=product.html onclick="saveCurrentItem(this)">
+                        <p class = "saved-item-img">
+                            <img src = "InStockImages/Pleasures-Freaks T-Shirt.jpg">
+                        </p>
+                        <div class = "saved-item-text">
+                            <p><strong>PLEASURES</strong></p>
+                            <p class = 'saved-item-name'>Freaks T-Shirt</p>
+                            <p>$38</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 
