--- a/src/inStock.html
+++ b/src/inStock.html
@@ -110,8 +110,10 @@
                     </a>
                 </div>
                 <div class = "in-stock-item">
-                    <a href=#>
-                        <p class = "in-stock-img"></p>
+                        <a href=product.html onclick="saveCurrentItem(this)">
+                        <p class = "in-stock-img">
+                            <img src = "InStockImages/MonclerGenius.jpg">
+                        </p>
                         <div class = "in-stock-text">
                             <p><strong>MONCLER GENIUS</strong></p>
                             <p>x JW Anderson T-Shirt</p>
@@ -120,12 +122,14 @@
                     </a>
                 </div>
                 <div class = "in-stock-item">
-                    <a href=#>
-                        <p class = "in-stock-img"></p>
+                        <a href=product.html onclick="saveCurrentItem(this)">
+                        <p class = "in-stock-img">
+                            <img src = "InStockImages/TobiasBirkNielsen.jpg">
+                        </p>
                         <div class = "in-stock-text">
-                            <p><strong>Brand</strong></p>
-                            <p>Name</p>
-                            <p>Price</p>
+                            <p><strong>Tobias Birk Nielsen</strong></p>
+                            <p>Dyed Track Pants</p>
+                            <p>$399</p>
                         </div>
                     </a>
                 </div>
