We spelt Cherry LA Wrong oops

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -183,7 +183,7 @@
                     <td class="Alphabet" id="C">C</td>
                     <td>
                         <p>CONVERSE</p>
-                        <a href = "CherryLABP.html"><p>CHEERY LA</p></a>
+                        <a href = "CherryLABP.html"><p>CHERRY LA</p></a>
                     </td>
                     <td>
                         <p>COMMON PROJECTS</p>
