--- a/src/index.html
+++ b/src/index.html
@@ -285,5 +285,29 @@
                 <li>About</li>
             </div>
         </footer>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyD8wJ0bFPY0Q9sQ2v4B2EXL_KWDwXZwNs0",
+    authDomain: "comp-224.firebaseapp.com",
+    databaseURL: "https://comp-224.firebaseio.com",
+    projectId: "comp-224",
+    storageBucket: "comp-224.appspot.com",
+    messagingSenderId: "344747179562",
+    appId: "1:344747179562:web:16d2b4aeb3917950ee0d53",
+    measurementId: "G-4R99TYPPK8"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
     </body>
     </html>
