updated nav bar to link to correct homepage

--- a/src/SignIn.html
+++ b/src/SignIn.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div id = "logo">
-                <a href = "homepage.html">
+                <a href = "index.html">
                     <img src="logo.jpg" alt="Thread Core">
                 </a>
             </div>
