--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
         <title>Thread Core</title> <!--Home?-->
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
+
       </head>
       <body>
         <nav>
@@ -32,7 +33,7 @@
                     </ul>
                 </div>
                 <div id = "logo">
-                    <a href = "homepage.html">
+                    <a href = "index.html">
                         <img src="logo.jpg" alt="Thread Core">
                     </a>
                 </div>
@@ -277,7 +278,7 @@
                 <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
                 <div id = "email-container">
                         <input type="email" id="email" name="email">
-                        <button type="button">Subscribe</button>
+                        <button type="button" onclick = "googleLogin()">Subscribe</button>
                 </div>
             </div>
             <div id = "footer-right">
@@ -309,6 +310,8 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
+  console.log(firebase.database());
 </script>
+
     </body>
-    </html>
+</html>
