--- a/src/index.html
+++ b/src/index.html
@@ -278,7 +278,7 @@
                 <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
                 <div id = "email-container">
                         <input type="email" id="email" name="email">
-                        <button type="button" onclick = "googleLogin()">Subscribe</button>
+                        <button type="button">Subscribe</button>
                 </div>
             </div>
             <div id = "footer-right">
