--- a/src/SignIn.html
+++ b/src/SignIn.html
@@ -3,6 +3,7 @@
     <title>Sign-In</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;500&family=Syne+Tactile&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -32,9 +33,9 @@
                 </ul>
             </div>
             <div id = "logo">
-                <a href = "homepage.html">
-                    <img src="logo.jpg" alt="Thread Core">
-                </a>
+                
+                    <img id="mylogo" alt="Thread Core">
+                
             </div>
             <div id = "nav-bar-right">
                 <ul>
