workiong on perfecting login drop down. curently it functions, but visually needs to be fixed.

--- a/src/ListOfBrands.html
+++ b/src/ListOfBrands.html
@@ -17,7 +17,11 @@
 
             <div id = "nav-bar-right">
                 <p>Search</p>
-                <p>Profile</p>
+                <li id="login">
+                    <p>Profile</p>
+                    <a id="login-trigger" href="#">
+                      Log in <span>▼</span>
+                    </a>
                 <p>Saved</p>
                 <p>Cart</p>
             </div>
