helping - image pulling works now

--- a/src/SignUp.html
+++ b/src/SignUp.html
@@ -3,11 +3,11 @@
     <title>Sign-In</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
-    <script src="databasescripts.js"></script>
+    <!-- <script src="databasescripts.js"></script> -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;500&family=Syne+Tactile&display=swap" rel="stylesheet">
     
 </head>
-<body onload = "initializeDB()">
+<body>
              <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
@@ -15,6 +15,7 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
     <script src="databasescripts.js"></script>
 
     <nav>
