Pulled Drop 1 photos from database indtead of file system

--- a/src/CherryLABP.html
+++ b/src/CherryLABP.html
@@ -23,6 +23,7 @@
                 <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
                 <button class="cartbtn">CART</button>
             </div>
+            <script src="databasescripts.js"></script>
             <div class="full-nav">
                 <div id = "nav-bar-left">
                     <ul>
@@ -34,7 +35,7 @@
                 </div>
                 <div id = "logo">
                     <a href = "index.html">
-                        <img src="logo.jpg" alt="Thread Core">
+                        <img id="mylogo">
                     </a>
                 </div>
                 <div id = "nav-bar-right">
@@ -53,7 +54,7 @@
         </div>
         <div class= "flex-container">
             <div class = "pictureContainers">
-                <img alt = "BrandLogo" src="CherryLALogo.jpg" width=auto height=500 >
+                <img id= "CherryLALogo" alt = "BrandLogo" width=auto height=500 >
             </div>
             <!-- <div style="border-left:1px solid #000;height:200px">  -->
             <div class = "text">
@@ -78,7 +79,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers" onclick = "saveBrandItem(this)">
                     <a href = "product.html">
-                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter1.png" width=auto height= 200 > 
+                    <img id="CherryFW1" alt="Object 1" width=auto height= 200 > 
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -91,7 +92,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter2.png" width=auto height= 200>
+                    <img id="CherryFW2" alt="Object 1" width=auto height= 200>
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -103,7 +104,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter3.png" width=auto height= 200>
+                    <img id="CherryFW3" alt="Object 1" width=auto height= 200>
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -114,7 +115,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter4.png" width=auto height= 200>
+                    <img id="CherryFW4" alt="Object 1" width=auto height= 200>
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -125,7 +126,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter5.png" width=auto height= 200 >
+                    <img id="CherryFW5" alt="Object 1" width=auto height= 200 >
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -136,7 +137,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter6.png" width=auto height= 200>
+                    <img id="CherryFW6" alt="Object 1" width=auto height= 200>
                     </a>
                 </div>
                 <div classs = "captionContainer">
