Fixed the logo pull error! We can now pull images from database storage

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -4,6 +4,7 @@
         <title>Brands</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
+        <!--<script src="databasescripts.js"></script>-->
     </head>
     <body>
         <nav>
@@ -22,7 +23,7 @@
                 <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
                 <button class="cartbtn">CART</button>
             </div>
-
+            <script src="databasescripts.js"></script>
             <div class="full-nav">
                 <div id = "nav-bar-left">
                     <ul>
@@ -34,7 +35,7 @@
                 </div>
                 <div id = "logo">
                     <a href = "index.html">
-                        <img src="logo.jpg" alt="Thread Core">
+                        <img id="mylogo" >
                     </a>
                 </div>
                 <div id = "nav-bar-right">
