--- a/src/Cart.html
+++ b/src/Cart.html
@@ -20,7 +20,7 @@
                         <a href=saved.html>SAVED</a>
                     </div>
                 </div>
-                <!--<img src="test" alt = "ThreadCore">Changed-->
+                
                 <button class="cartbtn">CART</button>
             </div>
 
@@ -35,7 +35,7 @@
                 </div>
                 <div id = "logo">
                     <a href = "index.html">
-                        <img src="logo.jpg" alt="Thread Core">
+                        <img id="mylogo">
                     </a>
                 </div>
                 <div id = "nav-bar-right">
@@ -110,24 +110,6 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
 
-    <script id = "MainScript">
-    // Your web app's Firebase configuration
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        var firebaseConfig = {
-            apiKey: "AIzaSyD8wJ0bFPY0Q9sQ2v4B2EXL_KWDwXZwNs0",
-            authDomain: "comp-224.firebaseapp.com",
-            databaseURL: "https://comp-224.firebaseio.com",
-            projectId: "comp-224",
-            storageBucket: "comp-224.appspot.com",
-            messagingSenderId: "344747179562",
-            appId: "1:344747179562:web:16d2b4aeb3917950ee0d53",
-            measurementId: "G-4R99TYPPK8"
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-
-        </script>
     </body>
 
     </html>
