--- a/src/SignUp.html
+++ b/src/SignUp.html
@@ -17,6 +17,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
     <script src="databasescripts.js"></script>
+    
 
     <nav>
         <div class="mobile-nav">
@@ -46,7 +47,7 @@
             </div>
             <div id='logo'>
                 <a href = "index.html">
-                    <img id='mylogo'>
+                    <img id="mylogo">
                 </a>
             </div>
             <div id = "nav-bar-right">
