--- a/src/CherryLABP.html
+++ b/src/CherryLABP.html
@@ -63,7 +63,7 @@
         </div>
         <div class= "flex-container">
             <div class = "pictureContainers">
-                <img id= "CherryLALogo" alt = "BrandLogo" width=auto height=500 >
+                <img alt = "BrandLogo" src="CherryLALogo.jpg" width=auto height=500 >
             </div>
             <!-- <div style="border-left:1px solid #000;height:200px">  -->
             <div class = "text">
@@ -88,7 +88,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers" onclick = "saveBrandItem(this)">
                     <a href = "product.html">
-                    <img id="CherryFW1" alt="Object 1" width=auto height= 200 > 
+                    <img alt="Object 1"  src="CherryBPImages/CherryFall:Winter1.png" width=auto height= 200 > 
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -101,7 +101,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img id="CherryFW2" alt="Object 1" width=auto height= 200>
+                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter2.png" width=auto height= 200>
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -113,7 +113,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img id="CherryFW3" alt="Object 1" width=auto height= 200>
+                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter3.png" width=auto height= 200>
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -124,7 +124,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img id="CherryFW4" alt="Object 1" width=auto height= 200>
+                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter4.png" width=auto height= 200>
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -135,7 +135,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img id="CherryFW5" alt="Object 1" width=auto height= 200 >
+                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter5.png" width=auto height= 200 >
                     </a>
                 </div>
                 <div class = "captionContainer">
@@ -146,7 +146,7 @@
             <div id = "subfont">
                 <div class = "pictureContainers">
                     <a href=>
-                    <img id="CherryFW6" alt="Object 1" width=auto height= 200>
+                    <img alt="Object 1" src="CherryBPImages/CherryFall:Winter6.png" width=auto height= 200>
                     </a>
                 </div>
                 <div classs = "captionContainer">
@@ -248,7 +248,7 @@
                 <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
                 <div id = "email-container">
                         <input type="email" id="email" name="email">
-                        <button type="button">Subscribe</button>
+                        <button type="sub-btn">Subscribe</button>
                 </div>
             </div>
             <div id = "footer-right">
