--- a/src/SignUp.html
+++ b/src/SignUp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
+<html>
 <head>
-    <title>Sign-In</title>
+    <title>Sign-Up</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="script.js"></script>
     <!-- <script src="databasescripts.js"></script> -->
@@ -91,7 +92,7 @@
             <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
             <div id = "email-container">
                     <input type="email" id="email" name="email">
-                    <button type="button">Subscribe</button>
+                    <button type="sub-btn">Subscribe</button>
             </div>
         </div>
         <div id = "footer-right">
@@ -104,3 +105,4 @@
 
 <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js"></script>
 </body>
+</html>
